placing files in the rightish place
and the forms

doing some color refactoring

attaching colortables to attributes

integrating pref

in progress

working on it

in progress

saving

working

move result

fix selection when cancelled

new editor

adding discrete editor

format

save